	search functions were used with MMFF94 or ghemical. UFF doesn't have
	this problem because it still uses the vector3 class.

	* src/forcefields/forcefieldmmff94.*: Added SetupPointer.
	SetupCalculations() now checks the intra and inter groups.

	* src/forcefields/forcefieldghemical.*: Added SetupPointer.

2008-04-19  Marcus D. Hanwell  <marcus@cryos.org>

	* configure.in, src/config.h.in: Updates to the auto* build tools,
	added HAVE_GCC_VISIBILITY logic and the defines to use it.

2008-04-15  Noel O'Boyle <baoilleach@gmail.com>

	* windows-vc2005/OBPython: removed
	* windows-vc2005/OBPythonOBF: added setup.py,
	openbabel_postinstall.py, Readme.txt and logo.bmp

2008-04-15 Chris Morley

	* tools/obchiral.cpp, tools/obenergy.cpp, tools/obfit.cpp,
	tools/obminimize.cpp, tools/obmm.cpp, tools/obprobe.cpp,
	tools/obprop.cpp, tools/obsym.cpp:
	don't #include <#include <unistd.h> in Windows build
	
	* windows-vc2005/OBTools.sln, windows-vc2005/OBTools,
	windows-vc2005/OBTools/*.proj: New build files for tools exes

	* windows-vc2005/Distribution/NSISScriptToCreateInstallerOBF.nsi
	Add tools exe files to installer

2008-04-14  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/atomrecord.cpp: Fix from Louis Ricard to handle PDB
	files from platon. An example has been added to the test
	repository.

	* src/formats/gamessukformat.cpp: New format contributed by Jens
	Thomas to support the GAMESS-UK variant.

	* src/formats/moldenformat.cpp, src/formats/msmsformat.cpp: Ensure
	namespace is properly included.

	* tools/babel.cpp: Eliminate some GCC warnings.

	* ltmain.sh, configure.in, configure, */Makefile.*: Upgrade to
	libtool 2.2.x, which offers improved build speed and bug fixes.

2008-04-13  Marcus D. Hanwell  <marcus@cryos.org>

	* CMakeLists.txt, cmake/modules/MacroEnsureVersion.cmake,
	src/config.h.cmake: Added visibility support when using a recent GCC
	compiler.

	* src/CMakeLists.txt, src/formats/CMakeLists.txt,